force-app/main/default/objects/Assignment__c/fields/AssignmentGroup__c.field-meta.xml
<CustomField>
    <fullName>AssignmentGroup__c</fullName>
    <label>AssignmentGroup</label>
    <referenceTo>AssignmentGroup__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>