force-app/main/default/objects/Assignment__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>DueDate</label>
    <type>DateTime</type>
</CustomField>